--- a/goals.html
+++ b/goals.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>OpenBSD: Project Goals</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<title>OpenBSD: Цели проекта</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="copyright" content="This document copyright 1996-2004 by OpenBSD.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="openbsd.css">
@@ -14,70 +14,76 @@
 <h2>
 <a href="index.html">
 <i><font color="#0000ff">Open</font></i><font color="#000084">BSD</font></a>
-<font color="#e00000">Project Goals</font>
+<font color="#e00000">Цели проекта</font>
 </h2>
 <hr>
 <p>
 
-Obviously, each developer working on OpenBSD has their own aims
-and priorities, but it is possible to classify the goals we all share:
+Каждый разработчик OpenBSD имеет свои цели и приоритеты, но можно
+выделить список общих целей, к достижению которых стремятся все:
 
 <p>
 <ul>
-<li>Provide the best development platform possible.  <a href="anoncvs.html">
-    Provide full source access to developers and users, including the
-    ability to look at CVS tree changes directly</a>.
-    Users can even look at our source tree and changes
-    <a href="https://cvsweb.openbsd.org/cgi-bin/cvsweb">directly on the web!</a>
+<li>Предоставить самую лучшую платформу для разработки программ.
+    <a href="anoncvs.html">Предоставлять полный доступ к исходным кодам
+    разработчикам и пользователям, включая возможность непосредственного
+    просмотра изменений в CVS</a>.  Пользователи даже могут
+    просматривать наши исходные коды и их изменения
+    <a href="http://www.openbsd.org/cgi-bin/cvsweb">в web!</a><p>
 <p>
-<li>Integrate good code from any source with <a href="policy.html">acceptable
-    licenses</a>.
-    ISC or Berkeley style licences are preferred, the GPL is not acceptable
-    when adding new code, NDAs are never acceptable.
-    We want to make available source code that anyone can use for ANY
-    PURPOSE, with no restrictions.
-    <strong>We strive to make our software robust and secure, and encourage
-    companies to use whichever pieces they want to.</strong>  There are
-    commercial spin-offs of OpenBSD.
+<li>Добавлять и интегрировать хороший код из других проектов, но только
+    распространяемых по 
+    <a href="../policy.html">свободной лицензии</a>. ISC и Berkeley
+    предпочтительней всего, добавление нового GPL-кода не допускается,
+    NDA - не допускается никогда.
+    Мы хотим предоставить исходники, которые каждый сможет использовать
+    ДЛЯ ЛЮБЫХ ЦЕЛЕЙ, без ограничений. <strong>Мы стараемся делать наше
+    ПО надежным и безопасным, и поощряем компании в использовании любых,
+    нужных им, частей.</strong> Существуют коммерческие продукты,
+    основанные на OpenBSD.
 <p>
-<li>Pay attention to <a href="security.html">security problems and fix
-    them before anyone else does</a>. (Try to be the #1 most
-    secure operating system.)
+<li>Уделять внимание <a href="security.html">проблемам безопасности и
+    стараться устранять их первымий</a>. (Мы пытаемся сделать
+    OpenBSD самой безопасной операционной системой.)<p>
 <p>
-<li><a href="crypto.html">Greater integration of cryptographic software.</a>
-    OpenBSD is developed and released from Canada and due to Canadian
-    law it is legal to export crypto to the world (as 
-    <a href="http://www.efc.ca/pages/doc/crypto-export.html">
-    researched by a Canadian individual</a> and as
+<li><a href="crypto.html">Интеграция с криптографией.</a> OpenBSD
+    разрабатывается в Канаде и, по канадскому законодательству, экспорт
+    криптостойких алгоритмов в программном обеспечении законен
+    (согласно <a href="http://www.efc.ca/pages/doc/crypto-export.html">
+    исследованиям, проведенным среди граждан Канады,</a> а так же 
     <a href="https://web.archive.org/web/20180128032722/http://axion.physics.ubc.ca/ECL.html">
-    documented in the Export Control list of Canada</a>).
+    как указано в списках контроля над экспортом Канады</a>).
 <p>
-<li>Track and implement standards (ANSI, POSIX, parts of X/Open, etc.)
+<li>Следить за стандартами и реализовывать их (ANSI, POSIX, части X/Open,
+и т.д.)
 <p>
-<li>Work towards a very machine independent source tree.
-    <a href="plat.html">Support as many different systems and hardware
-    as feasible.</a>
+<li>Создавать максимально аппаратно-независимый код.
+    <a href="plat.html">По возможности поддерживать как можно больше
+    различных платформ и устройств.</a>
 <p>
-<li>Be as politics-free as possible; solutions should be decided on the
-    basis of technical merit.
+<li>Быть свободными от политики насколько это возможно; решения
+    должны приниматься на основе технической целесообразности.
 <p>
-<li>Focus on being developer-oriented in all senses, including holding
-    developer-only events called <a href="hackathons.html">hackathons</a>.
+<li>Сконцентрироваться на том, чтобы быть ориентрированной на разработчика
+    во всех смыслах, включая проведение так называемых
+    <a href="hackathons.html">хакатонов</a>.
 <p>
-<li>Do not let serious problems sit unsolved.
+<li>Не оставлять серьезных проблем без решения.
 <p>
-<li>Make a release approximately every six months.
+<li>Выпускать новый релиз приблизительно каждые шесть месяцев.
 </ul>
 
 <a name=funding></a>
-<h2><font color="#e00000">Project Funding</font></h2>
+<h2><font color="#e00000">Финансирование проекта</font></h2>
 
-See our <a href="donations.html">Donations Page</a>.
+Информацию об этом можно найти на нашей
+<a href="donations.html">странице пожертвований</a>.
 
-<h2><font color="#e00000">Where do our developers live?</font></h2>
+<h2><font color="#e00000">Где живут разработчики?</font></h2>
 
-This map approximates where our developers live.  We will attempt to update it
-occasionally, but please don't count on that.
+На этой карте показаны примерные места проживания наших разработчиков.
+Мы будем стараться время от времени её обновлять, но сильно на это не
+рассчитывайте.
 
 <p>
 <center>
