--- a/openssh/index.html
+++ b/openssh/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>OpenSSH</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="description" content="the main OpenSSH page">
     <meta name="copyright" content="This document copyright 1999-2019
                                     by OpenBSD.">
@@ -13,18 +13,18 @@
 <table width="100%" height="100%" border="0" cellspacing="0" cellpadding="4">
 <tr><td bgcolor="#99cced" rowspan="2" valign=top style="white-space: nowrap">
 <b><big>About OpenSSH</big></b><br>
-&nbsp;<a href="goals.html">Project Goals</a><br>
-&nbsp;<a href="releasenotes.html">Release Notes</a><br>
-&nbsp;<a href="history.html">History</a><br>
-&nbsp;<a href="features.html">Features</a><br>
-&nbsp;<a href="security.html">Security</a><br>
-&nbsp;<a href="specs.html">Specifications</a><br>
-&nbsp;<a href="users.html">Who uses it</a><p>
+&nbsp;<a href="goals.html">Цели проекта</a><br>
+&nbsp;<a href="https://openssh.com/releasenotes.html">Release Notes</a><br>
+&nbsp;<a href="history.html">История</a><br>
+&nbsp;<a href="features.html">Возможности</a><br>
+&nbsp;<a href="security.html">Безопасность</a><br>
+&nbsp;<a href="specs.html">Спецификации</a><br>
+&nbsp;<a href="users.html">Кто это использует</a><p>
 <b><big>Resources</big></b><br>
-&nbsp;<a href="manual.html">Manuals</a><br>
-&nbsp;<a href="report.html">Reporting Bugs</a><br>
-&nbsp;<a href="list.html">Mailing Lists</a><br>
-&nbsp;<a href="https://marc.info/?l=openssh-unix-dev&amp;r=1&amp;w=2">List Archives</a><p>
+&nbsp;<a href="manual.html">Руководства</a><br>
+&nbsp;<a href="report.html">Сообщить об ошибке</a><br>
+&nbsp;<a href="list.html">Почтовая рассылка</a><br>
+&nbsp;<a href="https://marc.info/?l=openssh-unix-dev&amp;r=1&amp;w=2">Архив рассылки</a><p>
 <b><big>For OpenBSD</big></b><br>
 &nbsp;<a href="openbsd.html">FTP</a>
 &nbsp;<a href="https://www.openbsd.org/anoncvs.html">AnonCVS</a><br>
@@ -35,7 +35,7 @@
 &nbsp;<a href="portable.html">FreeBSD</a>
 &nbsp;<a href="portable.html">AIX</a><br>
 &nbsp;<a href="portable.html">HP-UX</a>
-&nbsp;<a href="portable.html">others..</a><p>
+&nbsp;<a href="portable.html">другие..</a><p>
 <br>
 
 </td>
@@ -44,16 +44,16 @@
     <img border="0" src="images/openssh.gif" height=191 width=578 alt="[OpenSSH]"></center>
 <p>
     <center><font color="#0000a0">
-    <a href="txt/release-7.9">OpenSSH 7.9</a> released October 19, 2018<br>
+    <a href="txt/release-7.9">OpenSSH 7.9</a> вышла 19 октября 2018<br>
     </font></center>
 <p>
-OpenSSH is the premier connectivity tool for remote login with the SSH protocol.
-It encrypts all traffic to eliminate eavesdropping, connection hijacking,
-and other attacks.
-In addition, OpenSSH provides a large suite of secure tunneling capabilities,
-several authentication methods, and sophisticated configuration options.
+OpenSSH это основной инструмент для соединения по протоколу SSH.
+Он шифруте весь траффик, чтобы исключить подслушивание, захват соединий,
+и другие атаки.
+Кроме того, OpenSSH предоставляет широкие возможности для создания безопасного туннелирования,
+несколько методов аутентификации и множество раличных настроек.
 <p>
-The OpenSSH suite consists of the following tools:
+OpenSSH состоит из следующих компонентов:
 <ul>
 <li>
 Remote operations are done using
@@ -75,16 +75,15 @@ The service side consists of
 </ul>
 <p>
 
-OpenSSH is developed by a few developers of the
-<a href="https://www.openbsd.org">OpenBSD Project</a> and made available
-under a BSD-style license.
+OpenSSH написан несколькими разработчиками 
+<a href="https://www.openbsd.org">OpenBSD Project</a> и распростаняется по лицензии BSD.
 
 <p>
-OpenSSH is incorporated into many commercial products, but very few of those
-companies assist OpenSSH with funding.
+OpenSSH включен во многие коммерческие продукты, но очень не многие 
+компании помогают OpenSSH с финансированием.
 
 <p>
-Contributions towards OpenSSH can be sent to the
+Финансовая помощь OpenSSH может быть оказана через 
 <a href="https://www.openbsd.org/donations.html">OpenBSD Foundation</a>.
 <p>
 
