[1.729] fix broken links

--- a/index.html
+++ b/index.html
@@ -52,38 +52,38 @@
     <td class="sidebar align-top">
       <big><b>Проект OpenBSD</b></big><br>
       &nbsp;<a href="goals.html">Цели проекта</a><br>
-      &nbsp;<a href="plat.html">Платформы</a><br>
+      &nbsp;<a href="https://www.openbsd.org/plat.html">Платформы</a><br>
       &nbsp;<a href="security.html">Безопасность</A>
       &nbsp;<a href="crypto.html">Криптография</a><br>
-      &nbsp;<a href="events.html">Встречи</a>
-      &nbsp;<a href="innovations.html">Инновации</a><br>
+      &nbsp;<a href="https://www.openbsd.org/events.html">Встречи</a>
+      &nbsp;<a href="https://www.openbsd.org/innovations.html">Инновации</a><br>
       <p>
       <big><b>Скачать&nbsp;OpenBSD</b></big><br>
-      &nbsp;<a href="faq/faq4.html#Download">Download</a><br>
+      &nbsp;<a href="https://www.openbsd.org/faq/faq4.html#Download">Download</a><br>
       <p>
       <big><b>Исходники</b></big><br>
-      &nbsp;<a href="anoncvs.html">AnonCVS</a>
-      &nbsp;<a href="cvsync.html">CVSync</a><br>
+      &nbsp;<a href="https://www.openbsd.org/anoncvs.html">AnonCVS</a>
+      &nbsp;<a href="https://www.openbsd.org/cvsync.html">CVSync</a><br>
       &nbsp;<a href="https://cvsweb.openbsd.org/">CVS Web</a><br>
       &nbsp;<a href="https://github.com/openbsd">Проект на GitHub</a><br>
       <p>
       <big><b>Информация</b></big><br>
       &nbsp;<a href="faq/index.html">FAQ</a><br>
       &nbsp;<a href="https://man.openbsd.org">Man-страницы</a><br>
-      &nbsp;<a href="errata64.html">Патчи</a><br>
+      &nbsp;<a href="https://www.openbsd.org/errata64.html">Патчи</a><br>
       &nbsp;<a href="ircs://irc.freenode.net:6697/openbsd">IRC</a><br>
-      &nbsp;<a href="report.html">Сообщить об ошибке</a><br>
-      &nbsp;<a href="mail.html">Почтовые рассылки</a><br>
-      &nbsp;<a href="lyrics.html">Песни</a> &amp;
-            <a href="artwork.html">Artwork</a><br>
+      &nbsp;<a href="https://www.openbsd.org/report.html">Сообщить об ошибке</a><br>
+      &nbsp;<a href="https://www.openbsd.org/mail.html">Почтовые рассылки</a><br>
+      &nbsp;<a href="https://www.openbsd.org/lyrics.html">Песни</a> &amp;
+            <a href="https://www.openbsd.org/artwork.html">Artwork</a><br>
       &nbsp;<a href="hackathons.html">Hackathons</a><br>
-      &nbsp;<a href="support.html">Поддержка</a><br>
+      &nbsp;<a href="https://openbsd.org/support.html">Поддержка</a><br>
       <p>
       <big><b>Поддержка&nbsp;OpenBSD</b></big><br>
       <!--
       &nbsp;<a href="https://openbsdstore.com">Buy OpenBSD Products</a><br>
       -->
-      &nbsp;<a href="donations.html">Пожертвования</a><br>
+      &nbsp;<a href="https://www.openbsd.org/donations.html">Пожертвования</a><br>
       &nbsp;<a href="https://www.openbsdfoundation.org/"><i>OpenBSD Foundation</i></a>
     </td>
     <td class="align-top">
@@ -101,17 +101,18 @@
       на коде 4.4BSD, UNIX-подобная операционная система. Мы придаем большое внимание
       переносимости, следованию стандартам, точности, <a href="security.html">безопасности</a> и
       <a href="crypto.html">криптографии</a>. В качестве примера успеха проекта можно назвать
-      <a href="https://www.openssh.com">OpenSSH</a>, первоночально написанную для OpenBSD.
+      <a href="openssh/index.html">OpenSSH</a>, первоночально написанную для OpenBSD.
       <p>
       Информацию по поводу загрузки OpenBSD можно найти на станице download.
       <p>
-      Последний релиз нашей системы, <a href="64.html">OpenBSD 6.4</a>, вышел 18 октября 2018.
+      Последний релиз нашей системы, <a href="https://www.openbsd.org/64.html">OpenBSD 6.4</a>,
+      вышел 18 октября 2018.
       <p>
       OpenBSD разрабатывается добровольцами. Процесс разработки, а также
       <a href="hackathons.html">встречи разработчиков</a> возможны благодаря финансовым взносам,
       собранным <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>.
       Эти пожертвования гарантируют дальнейшую разработку OpenBSD, которая остается
-      <a href="../policy.html">свободной</a> для всех.
+      <a href="https://www.openbsd.org/policy.html">свободной</a> для всех.
     </td>
   </tr>
   <tr>
