--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
       &nbsp;<a href="https://github.com/openbsd">Проект на GitHub</a><br>
       <p>
       <big><b>Информация</b></big><br>
+      &nbsp;<a href="https://www.openbsd.org/plus.html">Changelog</a><br>
       &nbsp;<a href="faq/index.html">FAQ</a><br>
       &nbsp;<a href="https://man.openbsd.org">Man-страницы</a><br>
       &nbsp;<a href="https://www.openbsd.org/errata64.html">Патчи</a><br>
