--- a/openssh/index.html
+++ b/openssh/index.html
@@ -12,30 +12,30 @@
 <body text="#000000" bgcolor="#ffffff" topmargin=0 leftmargin=0 marginheight=0 marginwidth=0>
 <table width="100%" height="100%" border="0" cellspacing="0" cellpadding="4">
 <tr><td bgcolor="#99cced" rowspan="2" valign=top style="white-space: nowrap">
-<b><big>About OpenSSH</big></b><br>
+<b><big>Проект OpenSSH</big></b><br>
 &nbsp;<a href="goals.html">Цели проекта</a><br>
-&nbsp;<a href="https://openssh.com/releasenotes.html">Release Notes</a><br>
-&nbsp;<a href="history.html">История</a><br>
+&nbsp;<a href="https://www.openssh.com/releasenotes.html">Release Notes</a><br>
+&nbsp;<a href="https://www.openssh.com/history.html">История</a><br>
 &nbsp;<a href="features.html">Возможности</a><br>
-&nbsp;<a href="security.html">Безопасность</a><br>
+&nbsp;<a href="https://www.openssh.com/security.html">Безопасность</a><br>
 &nbsp;<a href="specs.html">Спецификации</a><br>
 &nbsp;<a href="users.html">Кто это использует</a><p>
-<b><big>Resources</big></b><br>
+<b><big>Информация</big></b><br>
 &nbsp;<a href="manual.html">Руководства</a><br>
 &nbsp;<a href="report.html">Сообщить об ошибке</a><br>
-&nbsp;<a href="list.html">Почтовая рассылка</a><br>
+&nbsp;<a href="https://www.openssh.com/list.html">Почтовая рассылка</a><br>
 &nbsp;<a href="https://marc.info/?l=openssh-unix-dev&amp;r=1&amp;w=2">Архив рассылки</a><p>
-<b><big>For OpenBSD</big></b><br>
-&nbsp;<a href="openbsd.html">FTP</a>
+<b><big>Для OpenBSD</big></b><br>
+&nbsp;<a href="https://www.openssh.com/openbsd.html">FTP</a>
 &nbsp;<a href="https://www.openbsd.org/anoncvs.html">AnonCVS</a><br>
 &nbsp;<a href="https://cvsweb.openbsd.org/src/usr.bin/ssh">CVSWeb</a><p>
-<b><big>For other OS's</big></b><br>
-&nbsp;<a href="portable.html">Linux</a>
-&nbsp;<a href="portable.html">Solaris</a><br>
-&nbsp;<a href="portable.html">FreeBSD</a>
-&nbsp;<a href="portable.html">AIX</a><br>
-&nbsp;<a href="portable.html">HP-UX</a>
-&nbsp;<a href="portable.html">другие..</a><p>
+<b><big>Для других ОС</big></b><br>
+&nbsp;<a href="https://www.openssh.com/portable.html">Linux</a>
+&nbsp;<a href="https://www.openssh.com/portable.html">Solaris</a><br>
+&nbsp;<a href="https://www.openssh.com/portable.html">FreeBSD</a>
+&nbsp;<a href="https://www.openssh.com/portable.html">AIX</a><br>
+&nbsp;<a href="https://www.openssh.com/portable.html">HP-UX</a>
+&nbsp;<a href="https://www.openssh.com/portable.html">другие..</a><p>
 <br>
 
 </td>
@@ -47,36 +47,36 @@
     <a href="txt/release-7.9">OpenSSH 7.9</a> вышла 19 октября 2018<br>
     </font></center>
 <p>
-OpenSSH это основной инструмент для соединения по протоколу SSH.
-Он шифруте весь траффик, чтобы исключить подслушивание, захват соединий,
+OpenSSH это основной инструмент для создания соединений по протоколу SSH.
+Он шифрует весь траффик, что исключает прослушивание, захват соединений,
 и другие атаки.
-Кроме того, OpenSSH предоставляет широкие возможности для создания безопасного туннелирования,
-несколько методов аутентификации и множество раличных настроек.
+Кроме того, OpenSSH предоставляет широкие возможности для создания безопасного
+туннелирования, несколько методов аутентификации и множество раличных настроек.
 <p>
 OpenSSH состоит из следующих компонентов:
 <ul>
 <li>
-Remote operations are done using
+Операции с удаленными системами осуществляются при помощи
 <a href="https://man.openbsd.org/?query=ssh&amp;sektion=1">ssh</a>,
 <a href="https://man.openbsd.org/?query=scp&amp;sektion=1">scp</a>,
 and
 <a href="https://man.openbsd.org/?query=sftp&amp;sektion=1">sftp</a>.
 <li>
-Key management with
+Управление ключами при помощи
 <a href="https://man.openbsd.org/?query=ssh-add&amp;sektion=1">ssh-add</a>,
 <a href="https://man.openbsd.org/?query=ssh-keysign&amp;sektion=8">ssh-keysign</a>,
 <a href="https://man.openbsd.org/?query=ssh-keyscan&amp;sektion=1">ssh-keyscan</a>, and
 <a href="https://man.openbsd.org/?query=ssh-keygen&amp;sektion=1">ssh-keygen</a>.
 <li>
-The service side consists of
+Серверная часть состоит из
 <a href="https://man.openbsd.org/?query=sshd&amp;sektion=8">sshd</a>,
 <a href="https://man.openbsd.org/?query=sftp-server&amp;sektion=8">sftp-server</a>, and
 <a href="https://man.openbsd.org/?query=ssh-agent&amp;sektion=1">ssh-agent</a>.
 </ul>
 <p>
 
-OpenSSH написан несколькими разработчиками 
-<a href="https://www.openbsd.org">OpenBSD Project</a> и распростаняется по лицензии BSD.
+OpenSSH написан несколькими разработчиками
+<a href="../index.html">проекта OpenBSD</a> и распростаняется по лицензии BSD.
 
 <p>
 OpenSSH включен во многие коммерческие продукты, но очень не многие 
@@ -95,7 +95,7 @@ OpenSSH включен во многие коммерческие продукт
     <td>
     <hr>
 <small>
-<em>This site Copyright &copy; 1999-2019 OpenBSD.</em>
+<em>This site is just a translation version of <a href="https://www.openssh.com">openssh.com</a>.</em>
 </small>
     </td>
     </tr>
