imported missed files, fixed links to specs issue #3
- some files like favicons and css has been missed
added them to repo
- no sense to keep copies of openssh spec files and release notes in our
repo, so replaced relative links to absolute links on original site

--- a/openssh/goals.html
+++ b/openssh/goals.html
@@ -31,7 +31,7 @@ SSH 1 and SSH 2.
 
 The older SSH 1 protocol comes in two major sub-variants: protocol 1.3 and
 protocol 1.5.  Support for both has been removed from OpenSSH
-as of the <a href="txt/release-7.6">7.6 release</a>.
+as of the <a href="https://www.openbsd.org/openssh/txt/release-7.6">7.6 release</a>.
 Both of used the asymmetric cryptography algorithm
 <a href="https://man.openbsd.org/rsa">RSA</a>
 (for which the USA patent has expired, allowing full use by everyone)
