--- a/openssh/specs.html
+++ b/openssh/specs.html
@@ -230,11 +230,11 @@ Source: <a href="https://datatracker.ietf.org/wg/secsh/">secsh working group</a>
 <h3>Other specifications</h3>
 <table>
   <tr>
-    <td><a href="txt/socks4.protocol">socks4.protocol</a>
+    <td><a href="https://www.openbsd.org/openssh/txt/socks4.protocol">socks4.protocol</a>
     <td>SOCKS protocol version 4.  Used for <code>ssh(1) DynamicForward</code>.
   </tr>
   <tr>
-    <td><a href="txt/socks4a.protocol">socks4a.protocol</a>
+    <td><a href="https://www.openbsd.org/openssh/txt/socks4a.protocol">socks4a.protocol</a>
     <td>SOCKS protocol version 4a.  Used for <code>ssh(1) DynamicForward</code>.
   </tr>
   <tr>
