--- a/security.html
+++ b/security.html
@@ -283,7 +283,7 @@ Networks.<p>
 <br>
 Если вы хотите зашифровать письмо при помощи PGP (пользуйтесь им
 только при крайней необходимости, так как это неудобно), используйте этот
-<a href="../advisories/pgpkey.txt">pgp ключ</a>.
+<a href="https://www.openbsd.org/advisories/pgpkey.txt">pgp ключ</a>.
 
 <p>
 <a name="papers"></a>
