--- a/openntpd/index.html
+++ b/openntpd/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>OpenNTPD</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="description" content="the main OpenNTPD page">
     <meta name="copyright" content="This document copyright 2006-2019
                                     by OpenBSD.">
@@ -12,41 +12,40 @@
 <body text="#000000" bgcolor="#ffffff" topmargin=0 leftmargin=0 marginheight=0 marginwidth=0>
 <table width="100%" height="100%" border="0" cellspacing="0" cellpadding="4">
 <tr><td bgcolor="#99cced" rowspan="2" valign=top>
-<b><big>Resources</big></b><br>
-&nbsp;<a href="goals.html">Project Goals</a><br>
-&nbsp;<a href="features.html">Features</a><br>
-&nbsp;<a href="papers.html">Presentations</a><br>
-&nbsp;<a href="manual.html">Manual Pages</a><br><p>
-<b><big>For OpenBSD</big></b><br>
+<b><big>Информация</big></b><br>
+&nbsp;<a href="goals.html">Цели проекта</a><br>
+&nbsp;<a href="features.html">Возможности</a><br>
+&nbsp;<a href="papers.html">Доклады</a><br>
+&nbsp;<a href="manual.html">Руководства</a><br><p>
+<b><big>Для OpenBSD</big></b><br>
 &nbsp;<a href="https://www.openbsd.org/anoncvs.html">AnonCVS</a><br>
 &nbsp;<a href="https://cvsweb.openbsd.org/src/usr.sbin/ntpd/">CVSWeb</a><br><p>
-<b><big>For other OS's</big></b><br>
-&nbsp;<a href="portable.html">Releases</a><br>
-&nbsp;<a href="https://github.com/openntpd-portable">Development</a><br>
-&nbsp;<a href="https://github.com/openntpd-portable/openntpd-portable/issues">Bug Reports</a>
+<b><big>Для других ОС</big></b><br>
+&nbsp;<a href="portable.html">Релизы</a><br>
+&nbsp;<a href="https://github.com/openntpd-portable">Разработка</a><br>
+&nbsp;<a href="https://github.com/openntpd-portable/openntpd-portable/issues">Сообщить об ошибке</a>
 </td>
     <td bgcolor="#0000cc" rowspan="2"><font size="1">&nbsp;</font></td>
     <td bgcolor="#ffffff" valign="top"><center>
     <img border="0" src="images/openntpd.jpg" height=210 width=599 alt="[OpenNTPD]"></center>
     <center><font color="#0000a0">
-    <a href="txt/release-6.2p3.txt">OpenNTPD 6.2p3</a> released October 30, 2017<br>
+    Релиз <a href="txt/release-6.2p3.txt">OpenNTPD 6.2p3</a> состоялся 30 октября 2017 года<br>
     </font></center>
     <br>
 <p>
-OpenNTPD is a <b>FREE</b>, easy to use implementation of the
-Network Time Protocol.
-It provides the ability to sync the local clock to remote NTP servers
-and can act as NTP server itself, redistributing the local clock.
+OpenNTPD представляет из себя <b>СВОБОДНУЮ</b> и легкую в использовании
+реализацию Network Time Protocol. Она позволяет синхронизировать установки
+времени в системе с удаленными NTP-серверами, а так же сама может выступать в
+качестве сервера.
 <p>
-OpenNTPD was primarily developed by Henning Brauer as
-part of the <a href="https://www.openbsd.org">OpenBSD Project</a>
-and gets released as a base component of OpenBSD every six months.
-<p>The portable version, maintained by Brent Cook, is available
-via periodic tarball releases. Contributions are welcome to both the
-OpenNTPD core and the portable build framework.</p>
+OpenNTPD была первоначально написана Хеннингом Брауэром (Henning Brauer)
+в рамках <a href="../index.html">проекта OpenBSD</a> и выпускается как
+базовый компонент OpenBSD каждые шесть месяцев.
+<p>Портируемая версия, поддерживаемая Брентом Коком (Brent Cook), доступна
+со своим циклом релизов в виде тарбола. Приветствуется любой вклад как в
+саму OpenNTPD, так и в её портированную версию.</p>
 <p>
-The software is freely usable and re-usable by everyone under
-a BSD license.
+OpenNTPD свободно распространяется в соответствии с лицензией BSD.
 
 <!--
 The OpenBSD project sells
