--- a/openntpd/goals.html
+++ b/openntpd/goals.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>OpenNTPD: Goals</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<title>OpenNTPD: Цели проекта</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="description" content="OpenNTPD Goals">
 <meta name="copyright" content="This document copyright 1999-2016 by OpenBSD.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,40 +15,42 @@
 <h2>
 <a href="index.html">
 <font color="#0000ff"><i>Open</i></font><font color="#000084">NTPD</font></a>
-<font color="#e00000">Goals</font>
+<font color="#e00000">Цели проекта</font>
 </h2>
 <hr>
 
 <p>
-Our goal is to make NTP ubiquitous by providing a free simple implementation
-that is secure and easy to configure.
+Наша цель - сделать NTP вездесущим, предоставив свободную реализацию,
+которая была бы безопасной и простой в настройке.
 
 <ul>
 	<li>
-		Be as <b>secure</b> as possible. Code carefully, do strict
-		validity checks especially in the network input path, and use
-		bounded buffer operations. Use privilege separation to mitigate
-		the effects of possible security bugs.
+    Быть как можно более <b>защищенной</b>. Писать код как можно
+    внимательней, проводя строгие проверки, в особенности, что касается
+    сетевых входных данных, и использования операций с буферами.
+    Использовать разграничение привелегий, чтобы уменьшить вред от
+    возможных уязвимостей.
 	</li>
 	<li>
-		Provide a <b>lean</b> implementation, sufficient for a
-		majority.  Don't try to support each and every obscure usage
-		case, but cover the typical ones.
+    Предоставить <b>бережную</b> реализацию, подходящую и
+    удовлетворяющую большинство пользователей. Не пытаться поддерживать
+    все что только можно, но охватить основную функциональность.
 	</li>
 	<li>
-		Try to <b>&quot;Just Work&quot;</b> in the background.
+    Добиться уровня <b>&quot;Just Work&quot;</b>.
 	</li>
 	<li>
-		Work with just a <b>minimum of configuration</b>.
+    Упростить настройку; сделать <b>конфигурацию минимальной</b>.
 	</li>
 	<li>
-		Interoperate in the best possible way with the
-		<a href="http://www.pool.ntp.org/en/">NTP pools</a>
-		cluster, by supporting DNS lookups safely.
+    Оптимальное взаимодействуйте с
+    <a href="http://www.pool.ntp.org/en/">кластером пулов NTP</a>,
+    безопасно обеспечиваемое DNS поиском.
 	</li>
 	<li>
-		Reach a <b>reasonable accuracy</b>. Do not sacrifice secure
-		design for getting that last nanosecond or obscure edge case.
+    Достигнуть <b>разумной точности</b>. Не стоит приносить в жертву
+    безопасный дизайн просто ради того, чтобы увеличить точность до
+    наносекунд.
 	</li>
 </ul>
 
