--- a/openntpd/papers.html
+++ b/openntpd/papers.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>OpenNTPD: Presentations and Papers</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<title>OpenNTPD: Доклады и презентации</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="description" content="OpenNTPD related papers and presentations">
 <meta name="copyright" content="This document copyright 1999-2016 by OpenBSD.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,48 +15,49 @@
 <h2>
 <a href="index.html">
 <font color="#0000ff"><i>Open</i></font><font color="#000084">NTPD</font></a>
-<font color="#e00000">Presentations and Papers</font>
+<font color="#e00000">Доклады и презентации</font>
 </h2>
 <hr>
 
-<h3>Presentation: 21C3</h3>
+<h3>Презентация: 21C3</h3>
 <blockquote>
 <font color="#009000"><strong>
-<a href="http://bulabula.org/papers/21c3/">OpenBGPD and OpenNTPD</a>,
+<a href="http://bulabula.org/papers/21c3/">OpenBGPD и OpenNTPD</a>,
 Henning Brauer</strong></font><br>
-Combined presentation on
-<a href="http://www.openbgpd.org/">OpenBGPD</a> and
-<a href="http://www.openntpd.org/">OpenNTPD</a>
-that was given at
+Презентация о двух проектах
+<a href="http://www.openbgpd.org/">OpenBGPD</a> и
+<a href="http://www.openntpd.org/">OpenNTPD</a>, которая была
+прочинана на
 <a href="http://www.ccc.de/congress/2004/">21. Chaos Communication Congress</a>
-in Berlin, Germany in December 2004.
+в Берлине (ФРГ) в декабре 2004 года.
 </blockquote>
 
-<h3>Presentation: OpenCon 2004</h3>
+<h3>Презентация: OpenCon 2004</h3>
 <blockquote>
 <font color="#009000"><strong>
 <a href="http://bulabula.org/papers/opencon04/ntpd/">OpenNTPD</a>,
 Henning Brauer</strong></font><br>
-Presentation on <a href="http://www.openntpd.org/">OpenNTPD</a>
-that was given at
-<a href="http://www.opencon.org/">OpenCon 2004</a>
-in Venice, Italy in December 2004.
+Презентация о <a href="http://www.openntpd.org/">OpenNTPD</a>, которая
+была прочитана на <a href="http://www.opencon.org/">OpenCon 2004</a> в
+Венции (Италия) в декабре 2004 года.
 </blockquote>
 
-<h3>Presentation: SUCON 04</h3>
+<h3>Презентация: SUCON 04</h3>
 <blockquote>
 <font color="#009000"><strong>
-<a href="https://www.openbsd.org/papers/ntpd_sucon04/index.html">OpenNTPD</a>,
+<a href="http://www.openbsd.org/papers/ntpd_sucon04/index.html">OpenNTPD</a>,
 Henning Brauer
 </strong></font><br>
-Presentation on <a href="http://www.openntpd.org/">OpenNTPD</a>
-that was given at
+Презентация по <a href="http://www.openntpd.org/">OpenNTPD</a>
+была представлена на
 <a href="http://www.suug.ch/sucon/04/">SUCON 04</a>
-in Zurich, Switzerland in September 2004.
-This presentation outlines implementation details and rationale behind
+в Цюрихе (Швейцария) в сентябре 2004 года.
+Эта презентация описывает детали реализации
 <a href="http://www.openntpd.org/">OpenNTPD</a>.
-<a href="https://www.openbsd.org/papers/ntpd_sucon04.tgz">Tarball</a> of the presentation for offline viewing.
+<a href="http://www.openbsd.org/papers/ntpd_sucon04.tgz">Архив</a> презентации
+для просмотра в оффлайн.
 </blockquote>
+
 
 </body>
 </html>
