--- a/openntpd/manual.html
+++ b/openntpd/manual.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>OpenNTPD: Manual Pages</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<title>OpenNTPD: Руководства</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="description" content="OpenNTPD Manual Pages">
 <meta name="copyright" content="This document copyright 1999-2016 by OpenBSD.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,30 +15,31 @@
 <h2>
 <a href="index.html">
 <font color="#0000ff"><i>Open</i></font><font color="#000084">NTPD</font></a>
-<font color="#e00000">Manual Pages</font>
+<font color="#e00000">Руководства</font>
 </h2>
 <hr>
 <p>
 
-Web manual pages are available from
-<a href="https://www.openbsd.org/">OpenBSD</a>.
-These manual pages reflect the latest development release of OpenNTPD.<p>
+Web руководства доступны в самой
+<a href="../index.html">OpenBSD</a>.
+Эти руководства относятся к последней версии OpenNTPD.<p>
 
 <ul>
 <li><a href="https://man.openbsd.org/ntpd">ntpd</a>
-     - Network Time Protocol daemon
+     - NTP-демон
 <li><a href="https://man.openbsd.org/ntpctl">ntpctl</a>
-     - Network Time Protocol query program
+     - NTP-клиент
 <li><a href="https://man.openbsd.org/ntpd.conf">ntpd.conf</a>
-     - Network Time Protocol daemon configuration file
+     - конфигурационный файл NTP-демона
 </ul>
 
-The NTP protocol implemented in OpenNTPD is described in
-<a href="https://www.ietf.org/rfc/rfc1305.txt">RFC 1305</a> and
+Протокол NTP, реализованный в OpenNTPD, описан в
+<a href="https://www.ietf.org/rfc/rfc1305.txt">RFC 1305</a> и
 <a href="https://www.ietf.org/rfc/rfc5905.txt">RFC 5905</a>.
 <p>
 
-A reference implementation and other documentation of the NTP protocol is available from <a href="http://www.ntp.org/">ntp.org</a>.
+Материал о реализации, а так же другая документация о протоколе
+NTP, доступна на станице <a href="http://www.ntp.org/">ntp.org</a>. 
 
 </body>
 </html>
