--- a/openntpd/manual.html
+++ b/openntpd/manual.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>OpenNTPD: Руководства</title>
+<title>OpenNTPD: Документация</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="description" content="OpenNTPD Manual Pages">
 <meta name="copyright" content="This document copyright 1999-2016 by OpenBSD.">
@@ -15,7 +15,7 @@
 <h2>
 <a href="index.html">
 <font color="#0000ff"><i>Open</i></font><font color="#000084">NTPD</font></a>
-<font color="#e00000">Руководства</font>
+<font color="#e00000">Документация</font>
 </h2>
 <hr>
 <p>
