--- a/openntpd/papers.html
+++ b/openntpd/papers.html
@@ -19,40 +19,37 @@
 </h2>
 <hr>
 
-<h3>Презентация: 21C3</h3>
+<h3>Доклад на 21C3</h3>
 <blockquote>
 <font color="#009000"><strong>
 <a href="http://bulabula.org/papers/21c3/">OpenBGPD и OpenNTPD</a>,
 Henning Brauer</strong></font><br>
-Презентация о двух проектах
+Доклад о двух проектах
 <a href="http://www.openbgpd.org/">OpenBGPD</a> и
-<a href="http://www.openntpd.org/">OpenNTPD</a>, которая была
-прочинана на
+<a href="http://www.openntpd.org/">OpenNTPD</a>, который был прочитан на
 <a href="http://www.ccc.de/congress/2004/">21. Chaos Communication Congress</a>
 в Берлине (ФРГ) в декабре 2004 года.
 </blockquote>
 
-<h3>Презентация: OpenCon 2004</h3>
+<h3>Доклад на OpenCon 2004</h3>
 <blockquote>
 <font color="#009000"><strong>
 <a href="http://bulabula.org/papers/opencon04/ntpd/">OpenNTPD</a>,
 Henning Brauer</strong></font><br>
-Презентация о <a href="http://www.openntpd.org/">OpenNTPD</a>, которая
-была прочитана на <a href="http://www.opencon.org/">OpenCon 2004</a> в
+Доклад о <a href="http://www.openntpd.org/">OpenNTPD</a>, который
+был прочитан на <a href="http://www.opencon.org/">OpenCon 2004</a> в
 Венции (Италия) в декабре 2004 года.
 </blockquote>
 
-<h3>Презентация: SUCON 04</h3>
+<h3>Доклад на SUCON 04</h3>
 <blockquote>
 <font color="#009000"><strong>
 <a href="http://www.openbsd.org/papers/ntpd_sucon04/index.html">OpenNTPD</a>,
 Henning Brauer
 </strong></font><br>
-Презентация по <a href="http://www.openntpd.org/">OpenNTPD</a>
-была представлена на
+Доклад о <a href="http://www.openntpd.org/">OpenNTPD</a> был прочитан на
 <a href="http://www.suug.ch/sucon/04/">SUCON 04</a>
-в Цюрихе (Швейцария) в сентябре 2004 года.
-Эта презентация описывает детали реализации
+в Цюрихе (Швейцария) в сентябре 2004 года. Там описываются детали реализации
 <a href="http://www.openntpd.org/">OpenNTPD</a>.
 <a href="http://www.openbsd.org/papers/ntpd_sucon04.tgz">Архив</a> презентации
 для просмотра в оффлайн.
