--- a/openntpd/features.html
+++ b/openntpd/features.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>OpenNTPD: Features</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<title>OpenNTPD: Возможности</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="description" content="OpenNTPD Features">
 <meta name="copyright" content="This document copyright 1999-2016 by OpenBSD.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,75 +15,81 @@
 <h2>
 <a href="index.html">
 <font color="#0000ff"><i>Open</i></font><font color="#000084">NTPD</font></a>
-<font color="#e00000">Features</font>
+<font color="#e00000">Возможности</font>
 </h2>
 <hr>
 
 <p>
-Many NTP daemons fail in different areas. Some are complex, follow
-archaic design practices, and are difficult to configure. Others are
-overly simplistic, only support client-side synchronization, or are
-simply immature.
+Многие NTP-сервера не достаточно хороши в по разным причинам. Некоторые из
+них слишком сложны, следуют архаичным методам проектирования, а так же
+сложны в настройке. Другие же наоборот - слишком упрощены, поддерживают
+только синхронизацию на стороне клиента или просто находятся на ранней
+стадии разработки.
 
 <p>
-In an increasingly NTP-synchronized world, it is important to have a
-free implementation that provides good time synchronization while
-still maintaining high security and ease of configurability.
+В мире, где все больше и больше синхронизации с NTP, важно иметь свободную
+реализацию, которая обеспечивала бы хорошую синхронизацию времени, сохраняя
+при этом высокий уровень безопасности и простоту конфигурации.
 
 <p>
-To satisfy those goals, OpenNTPD has:
+Для достижения этих целей OpenNTPD предоставляет:
 <p>
 <ul>
 	<li>
-		Over 10 years of proven reliability.
+		Более 10 лет проверенной надежности.
 	</li>
 	<li>
-		A simple and easily understandable codebase.
+		Простой в понимании код.
 	</li>
 	<li>
-		Server and client-side synchronization. OpenNTPD is suitable for
-		everything from synchronizing your home router, laptop, or
-		thousand-node server cluster.
+		Синхронизация как на стороне сервера, так и на стороне клента.
+    OpenNTPD подходит для всего, от синхронизации домашнего роутера
+    или лептопа, и заканчивая кластером серверов, состоящим из тысячи
+    нод.
 	</li>
 	<li>
-		Privilege separation that isolates the unprivileged networking
-		code from the privileged time-setting code. The daemon runs
-		in a chroot environment, further limiting its capabilities.
+    Разделение привилегий, которое изолирует непривилегированный
+    процесс, работающий с сетью, от привилегированного, использованного
+    для установки времени. Демон работает в среде chroot, что еще
+    больше ограничивает его возможности.
 	</li>
 	<li>
-		Privilege-separated DNS support that works dynamically during
-		runtime, permitting late resolution even if the network is down
-		at startup.  This is important for long-running use of the
-		<a href="http://www.pool.ntp.org/en/">NTP pools</a> cluster.
+    Поддержка DNS с разделением привилегий, которая срабатывает
+    динамически во время выполнения, что позволяет создавать более
+    поздние запросы, даже если сеть не работает при запуске.
+    Это важно для длительного использования кластера
+		<a href="http://www.pool.ntp.org/en/">пулов NTP</a>.
 	</li>
 	<li>
-		Besides using
-		<a href="https://man.openbsd.org/?query=adjtime">adjtime(2)</a>
-		for coarse time adjustments, OpenNTPD can do fine-grained time
-		adjustment via the
+    Помимо использования
+    <a href="https://man.openbsd.org/?query=adjtime">adjtime(2)</a>
+    для грубых настроек времени, OpenNTPD может выполнять детальную
+    настройку времени с помощью системных вызовов
 		<a href="https://man.openbsd.org/?query=adjfreq">adjfreq(2)</a>
-		and ntp_adjtime system calls.
+    и ntp_adjtime.
 	</li>
 	<li>
-		Integration with time-synchronization hardware where the
-		<a href="https://man.openbsd.org/?query=sensorsd">sensorsd(8)</a>
-		framework is available.
+    Интеграция с аппаратным обеспечением для синхронизации времени,
+    где доступен фреймворк
+		<a href="https://man.openbsd.org/?query=sensorsd">sensorsd(8)</a>.
 	</li>
 	<li>
-		Support for virtual routing tables (called rdomains in OpenBSD)
-		to isolate the networks that OpenNTPD can reach.
+    Поддержка таблиц виртуальной маршрутизации (называемых в OpenBSD
+    rdomains) для изоляции сетей, к которым может обращаться OpenNTPD.
 	</li>
 	<li>
-		An <a href="https://man.openbsd.org/?query=ntpctl">ntpctl(8)</a>
-		command for querying real-time synchronization status.
+		Программа-клиент
+    <a href="https://man.openbsd.org/?query=ntpctl">ntpctl(8)</a>
+    для запроса статуса синхронизации в реальном времени.
 	</li>
 	<li>
-		Integrates the latest secure API advances from OpenBSD such as
+    Интеграция последних достижений secure API из OpenBSD, такие как
 		<a href="https://man.openbsd.org/?query=getentropy">getentropy(2)</a>,
 		<a href="https://man.openbsd.org/?query=arc4random">arc4random(3)</a>
-		(a fail-safe CSRNG that works in chroot environments), and
+    (отказоустойчивый CSRNG, который работает в chroot) и
 		<a href="https://man.openbsd.org/?query=reallocarray">reallocarray(3)</a>
-		(an integer overflow-checking malloc/calloc/realloc replacement).
+    (целочисленная проверка на переполнение (integer overflow-checking),
+    которая является заменой malloc/calloc/realloc).
 	</li>
 </ul>
 
