--- a/openntpd/features.html
+++ b/openntpd/features.html
@@ -20,14 +20,14 @@
 <hr>
 
 <p>
-Многие NTP-сервера не достаточно хороши в по разным причинам. Некоторые из
+Многие NTP-сервера не достаточно хороши по разным причинам. Некоторые из
 них слишком сложны, следуют архаичным методам проектирования, а так же
 сложны в настройке. Другие же наоборот - слишком упрощены, поддерживают
 только синхронизацию на стороне клиента или просто находятся на ранней
 стадии разработки.
 
 <p>
-В мире, где все больше и больше синхронизации с NTP, важно иметь свободную
+В мире, где все больше и больше NTP-синхронизации, важно иметь свободную
 реализацию, которая обеспечивала бы хорошую синхронизацию времени, сохраняя
 при этом высокий уровень безопасности и простоту конфигурации.
 
