--- a/index.html
+++ b/index.html
@@ -134,7 +134,11 @@
       <a href="https://www.libressl.org">LibreSSL</a>
       <br>
       <small>
-      <em>This site is just a part of the translation project of <a href="https://www.openbsd.org">openbsd.org</a></em><br>
+      <em>This site is a translated version of <a href="https://www.openbsd.org/">openbsd.org</a>.
+      Translation project is organized by <a href="https://github.com/alexander-naumov">Alexander Naumov</a>
+      and is going with the support of
+      <a href="https://github.com/openbsd-ru/openbsd-ru.github.io/blob/master/README.md#CONTRIBUTORS">
+      volunteers</a>.</em><br>
       </small>
     </td>
   </tr>
