[1.75] fix release-link, add project's info

--- a/openntpd/index.html
+++ b/openntpd/index.html
@@ -21,7 +21,7 @@
 &nbsp;<a href="https://www.openbsd.org/anoncvs.html">AnonCVS</a><br>
 &nbsp;<a href="https://cvsweb.openbsd.org/src/usr.sbin/ntpd/">CVSWeb</a><br><p>
 <b><big>Для других ОС</big></b><br>
-&nbsp;<a href="portable.html">Релизы</a><br>
+&nbsp;<a href="portable.html">Releases</a><br>
 &nbsp;<a href="https://github.com/openntpd-portable">Проект на GitHub</a><br>
 &nbsp;<a href="https://github.com/openntpd-portable/openntpd-portable/issues">Сообщить об ошибке</a>
 </td>
@@ -29,7 +29,7 @@
     <td bgcolor="#ffffff" valign="top"><center>
     <img border="0" src="images/openntpd.jpg" height=210 width=599 alt="[OpenNTPD]"></center>
     <center><font color="#0000a0">
-    Релиз <a href="txt/release-6.2p3.txt">OpenNTPD 6.2p3</a> состоялся 30 октября 2017 года<br>
+    Релиз <a href="http://openntpd.org/txt/release-6.2p3.txt">OpenNTPD 6.2p3</a> состоялся 30 октября 2017 года<br>
     </font></center>
     <br>
 <p>
@@ -48,6 +48,20 @@ OpenNTPD была первоначально написана Хеннингом
 OpenNTPD свободно распространяется в соответствии с лицензией BSD.
 
     </td>
+</tr>
+
+<tr>
+<td>
+<hr>
+<small>
+<em>This site is a translated version of <a href="http://www.openntpd.org/">openntpd.org</a>.
+Translation project is organized by <a href="https://github.com/alexander-naumov">Alexander Naumov</a>
+and is going with the support of
+<a href="https://github.com/openbsd-ru/openbsd-ru.github.io/blob/master/README.md#CONTRIBUTORS">
+volunteers</a>.</em>
+</br>
+</small>
+</td>
 </tr>
 </table>
 </body>
