--- a/openntpd/portable.html
+++ b/openntpd/portable.html
@@ -1,10 +1,8 @@
-<!-- DO NOT EDIT MANUALLY! See comments in www/build/mirrors.dat for details -->
-
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>OpenNTPD: Portable Release</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<title>OpenNTPD: Портируемая версия</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="description" content="OpenNTPD Portable Release">
 <meta name="copyright" content="This document copyright 1999-2017 by OpenBSD.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,33 +18,35 @@
 <h2>
 <a href="index.html">
 <font color="#0000ff"><i>Open</i></font><font color="#000084">NTPD</font></a>
-<font color="#e00000">Portable Release</font>
+<font color="#e00000">Портируемая версия</font>
 </h2>
 <hr>
 
 <p>
-The portable version of OpenNTPD adds support for other Unix flavors by adding
-autotool support and the necessary compatibility layer. It borrows heavily
-from the <a href="http://www.openssh.com">OpenSSH</a> and
-<a href="http://www.libressl.org">LibreSSL</a> portable projects.
+Портированная версия OpenNTPD работает и на нескольких других UNIX,
+благодаря добавленной поддержке autotool и необходимого уровня
+совместимости. При этом был использован опыт, полученный при
+портировнии проектов <a href="../openssh/index.html">OpenSSH</a>
+и <a href="http://www.libressl.org">LibreSSL</a>.
 
-<h3>Platform Requirements</h3>
+<h3>Требования к системе</h3>
 
 <ul>
-	<li>adjtime(2) and settimeofday(2) syscalls or equivalent.
-	<li>adjfreq(2) or an equivalent compatibility function
-	<li>daemon(3), setresgid(2), setresuid(2) or equivalent
-	<li>A working arc4random(3) or getentropy(2) implementation
+	<li>Системные вызовы adjtime(2) и settimeofday(2) или их эквивалент.
+	<li>adjfreq(2) или её совместимый эквивалент.
+	<li>daemon(3), setresgid(2), setresuid(2) или им эквивалентнные.
+	<li>Работающие реализации arc4random(3) или getentropy(2).
 </ul>
 
 <p>
-The more of these interfaces that are implemented natively by an operating
-system, the higher the chance a portable version will just work. If your
-operating system is unsupported, encourage your OS vendor to support these
-secure and simple APIs.
+Чем больше таких интерфейсов изначально реализовано ОС, тем выше
+вероятность, что портированная версия будет работать. Если ваша ОС
+не поддерживается, попросите вашего поставщика ОС поддерживать
+эти безопасные и простые API.
 
 <p>
-At the time of writing, OpenNTPD portable is known to build and work on:
+На момент написания, портированная версия OpenNTPD собиралась и
+работала на:
 
 <ul>
 	<li>OpenBSD
@@ -58,14 +58,15 @@ At the time of writing, OpenNTPD portable is known to build and work on:
 </ul>
 
 <p>
-OpenNTPD may work on other operating systems, newer and older, but the above
-ones are tested regularly by the developers.  Reports (success or otherwise)
-are welcome. You may report bugs or submit pull requests at the 
-<a href="https://github.com/openntpd-portable">GitHub project</a>.
+OpenNTPD может работать и на других ОС, более новых и старых, но
+вышеперечисленные регулярно тестируются разработчиками. Отчеты
+(успех или нет) приветствуются. Вы можете сообщить об ошибках или
+отправлять pull request в 
+<a href="https://github.com/openntpd-portable">проект на GitHub</a>.
 <p>
 
 <h2>
-Download
+Список зеркал
 </h2>
 <p>
 
@@ -73,9 +74,9 @@ Download
 
 <a name="mirrors"></a>
 <strong>Index</strong><br>
-<a href="#http">HTTP mirrors</a><br>
-<a href="#ftp">FTP mirrors</a><br>
-<a href="#rsync">RSYNC mirrors</a><br>
+<a href="#http">HTTP зеркала</a><br>
+<a href="#ftp">FTP зеркала</a><br>
+<a href="#rsync">RSYNC зеркала</a><br>
 
 <p></p><hr>
 <h3 id="http">HTTP</h3>
