[1.730] add link to openntpd

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       Associated projects:
       <a href="openssh/index.html">OpenSSH</a>,
       <a href="http://www.openbgpd.org">OpenBGPD</a>,
-      <a href="http://www.openntpd.org">OpenNTPD</a>,
+      <a href="openntpd/index.html">OpenNTPD</a>,
       <a href="https://www.opensmtpd.org">OpenSMTPD</a>,
       <a href="http://www.openiked.org">OpenIKED</a>,
       <a href="https://mandoc.bsd.lv">mandoc</a>,
