--- a/openssh/index.html
+++ b/openssh/index.html
@@ -95,7 +95,11 @@ OpenSSH включен во многие коммерческие продукт
     <td>
     <hr>
 <small>
-<em>This site is just a translation version of <a href="https://www.openssh.com">openssh.com</a>.</em>
+<em>This site is a translated version of <a href="https://www.openssh.com/">openssh.com</a>.
+Translation project is organized by <a href="https://github.com/alexander-naumov">Alexander Naumov</a>
+and is going with the support of
+<a href="https://github.com/openbsd-ru/openbsd-ru.github.io/blob/master/README.md#CONTRIBUTORS">
+volunteers</a>.</em>
 </small>
     </td>
     </tr>
