[1.730] add link to openbgpd

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <hr>
       Associated projects:
       <a href="openssh/index.html">OpenSSH</a>,
-      <a href="http://www.openbgpd.org">OpenBGPD</a>,
+      <a href="openbgpd/index.html">OpenBGPD</a>,
       <a href="openntpd/index.html">OpenNTPD</a>,
       <a href="https://www.opensmtpd.org">OpenSMTPD</a>,
       <a href="http://www.openiked.org">OpenIKED</a>,
